kubernetes/apps/flux-system/flux-instance/app/receiver/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 403"]
spec:
  hostnames:
    - flux-webhook.k13.dev
  parentRefs:
    - name: envoy-external
      namespace: networking
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
